debug-toolbar added, css changes

--- a/goods/templates/goods/index.html
+++ b/goods/templates/goods/index.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block link %}
-<link rel="stylesheet" href="{% static 'shopapp/css/main.css' %}">
+<link rel="stylesheet" href="{% static 'general/css/main.css' %}">
+<link rel="stylesheet" href="{% static 'shopapp/css/shopapp.css' %}">
 <link rel="stylesheet" href="{% static 'goods/css/goods.css' %}">
 {% endblock %}
 
