--- a/shopapp/templates/shopapp/index.html
+++ b/shopapp/templates/shopapp/index.html
@@ -23,7 +23,6 @@ Competh - Home
         <p class="components-title title">Pick up components for your computer</p>
 
         <div class="components">
-            
             <a href="#" class="components__item">
                 <img src="{% static "shopapp/img/component/processor.png" %}" alt="Processors">
                 <p>Processors</p>
@@ -55,23 +54,23 @@ Competh - Home
             <div class="providings">
                 <div class="provide1">
                     <img src="{% static 'shopapp/img/main/provide/provide1.png' %}" alt="">
-                    <p class="provide-title">Free delivery</p>
-                    <p class="provide-subtitle">For all orders from 100$</p>
+                    <p class="subtitle provide-title">Free delivery</p>
+                    <p class="subtitle2 provide-subtitle">For all orders from 100$</p>
                 </div>
                 <div class="provide2">
                     <img src="{% static 'shopapp/img/main/provide/provide2.png' %}" alt="">
-                    <p class="provide-title">Money refunds</p>
-                    <p class="provide-subtitle">30 days warranty</p>
+                    <p class="subtitle provide-title">Money refunds</p>
+                    <p class="subtitle2 provide-subtitle">30 days warranty</p>
                 </div>
                 <div class="provide3">
                     <img src="{% static 'shopapp/img/main/provide/provide3.png' %}" alt="">
-                    <p class="provide-title">Support 24/7</p>
-                    <p class="provide-subtitle">We work around the clock</p>
+                    <p class="subtitle provide-title">Support 24/7</p>
+                    <p class="subtitle2 provide-subtitle">We work around the clock</p>
                 </div>
                 <div class="provide4">
                     <img src="{% static 'shopapp/img/main/provide/provide4.png' %}" alt="">
-                    <p class="provide-title">Fast deivery</p>
-                    <p class="provide-subtitle">In 2-4 buisness days</p>
+                    <p class="subtitle provide-title">Fast deivery</p>
+                    <p class="subtitle2 provide-subtitle">In 2-4 buisness days</p>
                 </div>
             </div>
         </div>
