--- a/users/templates/users/sign up.html
+++ b/users/templates/users/sign up.html
@@ -5,13 +5,13 @@ Competh - Sign up
 {% endblock %}
 
 {% block auth-title %}
-Sign up
+{{ title }}
 {% endblock %}
 
 {% block signup %}
 <label>
     Confirm password:<br>
-    <input name="confirm password" class="auth-input"/><br>
+    <input type="password" name="confirm password" class="auth-input"/><br>
 </label>
 {% endblock %}
 
