--- a/goods/static/goods/css/goods.css
+++ b/goods/static/goods/css/goods.css
@@ -11,36 +11,65 @@
 .catalog__item {
     position: relative;
     width: 300px;
-    height: 350px;
+    height: 370px;
     margin: 0 30px 40px 30px;
     border: 2px solid #C603D7;
     overflow: hidden;
-    padding: 0 10px;
+    background-color: var(--color-bg-header );
     border-radius: 8px;
-    box-shadow: 0 0 10px #C603D7 inset;
+    box-shadow: 0 0 10px #C603D7 inset, 0 0 10px #C603D7 ;
 }
-.subtitle {
-    font-family: "Inter";
-    font-weight: 800;
+.catalog__item-container {
+    padding: 0 10px;
+}
+.price_container {
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    height: 5%;
+}
+.subtitle-goods {
     font-size: 16px;
-    color: #6D32BA;
-    height: 60px;
 }
 .subtitle-price {
-    height: 20px;
-    font-size: 18px;
-    color: #9747FF;
-    margin-top: 10px;
+    position: relative;
+    font-size: 20px;
+}
+.subtitle-id {
+    margin-top: 5px;
+    font-size: 14px;
+    color: #6D32BA;
 }
 .catalog__item .catalog__item-img {
     width: 100%;
-    height: 80%;
+    height: 70%;
     object-fit: contain;
-    margin: -40px 0 0 0;
 }
 .basket {
-    width: 15%;
+    width: 16%;
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+.subtitle-price__old{
+    margin-right: 10px;
+    color: #6D32BA;
+}
+.subtitle-price__old:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    border-bottom: 2px solid #6D32BA;
+    width: 100%;
+}
+.discount_container{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 3px 7px;
+    border-radius: 3px;
+    background-color: #9747FF;
+    color: white;
+    box-shadow: 0 0 10px #9747FF;
 }
