--- a/shopapp/static/shopapp/css/shopapp.css
+++ b/shopapp/static/shopapp/css/shopapp.css
@@ -78,7 +78,7 @@
     border-color: #C603D7;
 }
 .header-menu{
-    height: 80%;
+    height: 60%;
     margin: 0 0 0 7%;
     cursor: pointer;
     z-index: 2;
@@ -101,12 +101,18 @@
 
 /*!!!!!!!!!!!!!!!!!  CATALOG  !!!!!!!!!!!!!!!!!*/
 .catalog-menu-container{
+    width: 100%;
+    height: 80%;
     position: absolute;
-    left:0;
-    right:0;
-    top:0;
-    bottom:0;
-    margin: 150px auto 0 auto;
+    top: 80px;
+    left: 0;
+    right: calc(-1 * (100vw - 100%));
+    bottom: 0;
+    margin: auto;
+    z-index: 3;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.4s ease, visibility 0.4s ease;
 }
 
 .catalog-menu{
@@ -114,15 +120,10 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-bg-header);
-    width: 100%;
-    height: 70vh;
+    height: 100%;
     padding: 20px;
-    z-index: 3;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
 }
-.catalog-menu.active{
+.catalog-menu-container.active{
     opacity: 1;
     visibility: visible;
 }
@@ -157,7 +158,8 @@
 }
 .main-button__div{
     position: absolute;
-    margin: 450px 0 0 0;
+    bottom: 0;
+    left: 0;
 }
 .main-button{
     position: relative;
@@ -355,7 +357,7 @@ div:before {transform: rotate(-45deg);}
 .blackout {
     position: absolute;
     width: 100%;
-    height: 110%;
+    height: 110vh;
     top: 0; 
     left: 0;
     background: rgba(0,0,0,0.5);
@@ -507,17 +509,16 @@ body::-webkit-scrollbar-thumb {
     position: relative;
     display: flex;
     justify-content: start; 
-    
 }
 .components-container{
     margin-top: 60px;
 }
 .components-title {
     width: 100%;
+    height: 100%;
     font-size: 40px;
     margin-bottom: 20px;
     text-shadow: 0 0 20px #90069C;
-
 }
 .components__item {
     position: relative;
