--- a/static/general/css/main.css
+++ b/static/general/css/main.css
@@ -12,20 +12,20 @@ body.dark{
 }
 body.light{
     --color-bg: #D8BAFF;
-    --color-bg-header: #d0acff;
+    --color-bg-header: #d2b2ff;
     --color-theme-border: #0D0316;
 }
+
 body{
-    width: 100vw;
-    background-color: var(--color-bg);
     overflow-x: hidden;
+    width:100vw;    
+    background-color: var(--color-bg);
     transition: background-color 0.3s ease;
 }
 
 ._container{
     max-width: 1600px;
     margin: 0 auto;
-    padding: 15px;
 }
 
 .title{
@@ -34,7 +34,7 @@ body{
     font-family: "Julius Sans One", sans-serif;
     color: #C603D7;
     font-size: 128px;
-    text-shadow: 0 0 100px #c503d7, 0 0 100px #c503d7;
+    text-shadow: 0 0 100px #C603D7, 0 0 100px #C603D7;
 }
 .subtitle{
     font-family: "Inter";
