--- a/templates/general/base.html
+++ b/templates/general/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Julius+Sans+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'general/img/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'general/css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'general/css/main.css' %}">
     {% block link %}
     {% endblock %}
 </head>
