--- a/goods/static/goods/css/goods.css
+++ b/goods/static/goods/css/goods.css
@@ -1,5 +1,5 @@
 ._container-catalog{
-    margin-top: 100px;
+    margin-top: 30px;
     padding: 0;
 }
 .catalog-container {
@@ -73,4 +73,65 @@
     background-color: #9747FF;
     color: white;
     box-shadow: 0 0 10px #9747FF;
+}
+.paginator {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.paginator__row {
+    display: flex;
+    position: relative;
+
+}
+.paginator__item {
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 3px;
+    font-weight: 700;
+    border: 1px solid #9747ff8e;
+
+}
+.paginator__item a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+}
+.paginator__item.active {
+    border: 2px solid #9747FF;
+}
+.paginator__item:not(:last-child) {
+    margin-right: 10px;
+}
+.paginator__item.disabled {
+    visibility: hidden;
+}
+
+.sort-container {
+    display: flex;
+    position: relative;
+    justify-content: end;
+    height: 50px;
+    margin-bottom: 30px;
+}
+.sort-button {
+    height: 100%;
+    width: 180px;
+    border: 2px solid #C603D7;
+    color: #C603D7; 
+    font-weight: 600;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #C603D7 inset, 0 0 5px #C603D7;
+    background-color: transparent;
+
+}
+.sort-button:not(:last-child){
+    margin-right: 20px;
+}
+.sort-button.selected {
+    background-color: #C603D7;
+    color: #FFFF;
 }
