--- a/goods/templates/goods/index.html
+++ b/goods/templates/goods/index.html
@@ -1,29 +1,38 @@
 {% extends "general/home.html" %}
 
 {% load static %}
+{% load goods_tags %}
 
 {% block title %}
 {{ title }}
 {% endblock %}
 
 {% block link %}
-<link rel="stylesheet" href="{% static 'general/css/main.css' %}">
 <link rel="stylesheet" href="{% static 'shopapp/css/shopapp.css' %}">
 <link rel="stylesheet" href="{% static 'goods/css/goods.css' %}">
-
 {% endblock %}
 
 {% block main_content %}
 <div class="main_content">
     <div class="_container _container-catalog">
+        <div class="sort-container">
+            <form action="{% url "catalog:index" category_url %}" method="get">
+                <button class="sort-button {% if not request.GET.sort_price or request.GET.sort_price == "default" %}selected{% endif %}" type="submit" name="sort_price" value="default">By default</button>
+                <button class="sort-button {% if request.GET.sort_price == "price" %}selected{% endif %}" type="submit" name="sort_price" value="price">Cheaper at first</button>
+                <button class="sort-button {% if request.GET.sort_price == "-price" %}selected{% endif %}" type="submit" name="sort_price" value="-price">Expensive at first</button>
+            </form>
+        </div>
         <div class="catalog-container">
             {% for product in products %}
                 <div class="catalog__item">
-                    {% if product.image %}
-                        <img src="{{ product.image.url }}" alt="{{ product.name }}" class="catalog__item-img">
-                    {% else %}
-                        <img src="{% static "goods/img/image-not-found2.png" %}" alt="" class="catalog__item-img">
-                    {% endif %}
+                    <a href="{% url "catalog:product" product.slug %}">
+                        {% if product.image %}
+                            <img src="{{ product.image.url }}" alt="{{ product.name }}" class="catalog__item-img">
+                        {% else %}
+                            <img src="{% static "goods/img/image-not-found2.png" %}" alt="" class="catalog__item-img">
+                        {% endif %}
+                    </a>
+
                     <div class="catalog__item-container">
                         <a href="{% url "catalog:product" product.slug %}"><h2 class="subtitle subtitle-goods">{{ product.name }}</h2></a>
                         {% if product.discount %}
@@ -47,6 +56,33 @@
             {% endfor %}
 
         </div>
+        {% if products.paginator.num_pages > 1 %}
+        <div class="paginator">
+            <ul class="paginator__row">              
+                <li class="paginator__item {% if not products.has_previous %}disabled{% endif %}">
+                    <a href="{% if products.has_previous %}?{% change_params page=1 %}{% endif %}">&lt&lt</a>
+                </li>
+
+                <li class="paginator__item {% if not products.has_previous %}disabled{% endif %}">
+                    <a href="{% if products.has_previous %}?{% change_params page=products.previous_page_number %}{% endif %}">&lt</a>
+                </li>
+                
+                {% for page in products.paginator.page_range %}
+                {% if page >= products.number|add:-3 and page <= products.number|add:3 %}
+                    <li class="paginator__item {% if products.number == page %}active{% endif %}"><a href="?{% change_params page=page %}">{{ page }}</a></li>
+                {% endif %}
+                {% endfor %}
+
+                <li class="paginator__item {% if not products.has_next %}disabled{% endif %}">
+                    <a href="{% if products.has_next %}?{% change_params page=products.next_page_number %}{% endif %}">&gt</a>
+                </li>
+                
+                <li class="paginator__item {% if not products.has_next %}disabled{% endif %}">
+                    <a href="{% if products.has_next %}?{% change_params page=products.paginator.num_pages %}{% endif %}">&gt&gt</a>
+                </li>
+            </ul>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
