--- a/shopapp/static/shopapp/css/shopapp.css
+++ b/shopapp/static/shopapp/css/shopapp.css
@@ -17,7 +17,6 @@
     align-items: center;
 }
 .header-logo__link{
-    position: relative;
     z-index: 2;
     margin-right: auto;
 }
@@ -28,32 +27,47 @@
 .header-logo:hover{
     filter: drop-shadow(0px 0px 30px #622C8E);
 }
-.header__row li{
+.header__row {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header__row li {
     margin: 0px 35px;
 }
-.header__item{
+
+.header__item {
+    position: relative;
     font-family: "Montserrat";
 }
-.header__item-l{
-    position: relative;
-
-    margin-left: 15px;
-}
-.header__item:before{
-    content:"";
+.header__item:before {
+    content: "";
     position: absolute;
-    bottom: -2px;
+    bottom: -1px;
     left: 0;
     width: 0;
     border-top: 1px solid #C603D7;
     transition: width 0.3s ease;
 }
+.header__item-l p:before {
+    content:"";
+    bottom: -3px;
+}
 .header__item:hover:before{
     width: 100%;
 }
-.header__item-l:after{
+.header__item-l{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header__item-l img{
+    width: 25px;
+}
+
+/* .header__item-l:after{
     content: "";
     background-image: url('/static/shopapp/img/header/login.png');
     background-size: cover;
@@ -63,7 +77,7 @@
     width: 25px;
     height: 25px;
     transform: rotate(0deg);
-}
+} */
 
 .header-button{
     font-family: "Montserrat";
@@ -355,9 +369,9 @@ div:before {transform: rotate(-45deg);}
 }
 
 .blackout {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 110vh;
+    min-height: 100%;
     top: 0; 
     left: 0;
     background: rgba(0,0,0,0.5);
@@ -422,7 +436,8 @@ div:before {transform: rotate(-45deg);}
     background-color: var(--color-bg-header);
     box-shadow: 0 -2px 20px #9747FF;
     width: 100%;
-    margin: 300px auto;
+    margin: 200px auto;
+    transition: background-color 0.3s ease ;
 }
 .footer__container{
     padding: 20px 0;   
