--- a/users/templates/users/sign up.html
+++ b/users/templates/users/sign up.html
@@ -1,11 +1,11 @@
 {% extends 'users/auth.html' %}
 
 {% block title %}
-Competh - Sign up
+{{ title }}
 {% endblock %}
 
 {% block auth-title %}
-{{ title }}
+Sign up
 {% endblock %}
 
 {% block signup %}
